@@ -33,7 +33,7 @@
                     <views:TimeStepper x:Name="MasterTimeStepper" HorizontalOptions="Center" OnStep="MasterTimeStepper_OnOnStep"/>
                     <StackLayout  HorizontalOptions="Center" Orientation="Horizontal">
                         <Label Text="Sync point:"  VerticalOptions="Center"/>
-                        <Button x:Name="MasterTimeButton" Text="Unset" Clicked="MasterTimeButton_OnClicked"  VerticalOptions="Center"/>
+                        <Button x:Name="MasterTimeButton" Text="Set" Clicked="MasterTimeButton_OnClicked"  VerticalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
                 <Label Text="Slave" Grid.Column="1" Grid.Row="0" HorizontalTextAlignment="Center" />
@@ -44,7 +44,7 @@
                     <views:TimeStepper x:Name="SlaveTimeStepper" HorizontalOptions="Center" OnStep="SlaveTimeStepper_OnOnStep"/>
                     <StackLayout  HorizontalOptions="Center"  Orientation="Horizontal">
                         <Label Text="Sync point:" VerticalOptions="Center"/>
-                        <Button x:Name="SlaveTimeButton" Text="Unset" Clicked="SlaveTimeButton_OnClicked"  VerticalOptions="Center"/>
+                        <Button x:Name="SlaveTimeButton" Text="Set" Clicked="SlaveTimeButton_OnClicked"  VerticalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </Grid>
